<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F1F1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="735dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_select_left"
                android:text="@string/iniciar_sesion"
                android:textColor="#020202"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_no_select_right"
                android:onClick="irRegistrarse"
                android:text="@string/registrarse"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFotoMascota"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginVertical="14dp"
            app:srcCompat="@drawable/logovet" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo"
            app:boxStrokeColor="@color/input_form"
            app:hintTextColor="@color/input_form"
            app:endIconMode="clear_text"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            app:boxStrokeColor="@color/input_form"
            app:hintTextColor="@color/input_form"
            app:endIconMode="clear_text"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:backgroundTint="#146C94"
            android:onClick="ingresar"
            android:text="@string/ingresar"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>